--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -184,13 +184,15 @@
                         yorum: this.yorum
                     }).then(response => {
                         if (response.data.status == true) {
-                            swal({
-                                title: "Başarılı!",
-                                text: "Yorum ekleme başarılı !",
-                                icon: "success",
-                            }).then(function() {
+                            // swal({
+                            //     title: "Başarılı!",
+                            //     text: "Yorum ekleme başarılı !",
+                            //     icon: "success",
+                            // }).then(function() {
+                            // });;
+                            setInterval(() => {
                                 window.location.reload()
-                            });;
+                            }, 1000);
                         } else {
 
                         }
