--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -38,7 +38,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M3 4h18v2H3V4zm0 7h12v2H3v-2zm0 7h18v2H3v-2z" fill="currentColor"></path></svg>
                         </span> -->
 
-                        <div id="logo">
+                        <div id="logo" style="padding-left: 2vw;">
                             <a href="/">
                                 <img src="../../../panpan.png" alt="">
                                 <img src="../../../panpan.png" class="logo_mobile" alt="">
