--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -51,23 +51,32 @@
                                     </div>
                                     <div class="row">
 
-                                        <div class="col-md-4 col-sm-4 col-xs-4" style="width: 33%;">
-                                            <div class="flex items-center space-x-4">
-                                                <ion-icon style="padding-left: 6vw;" name="share-social-outline" class="text-2xl"></ion-icon>
-                                                <span class="text-xl">3</span>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4 col-sm-4 col-xs-4" style="width: 33%;">
-                                            <div class="flex items-center space-x-4">
-                                                <ion-icon style="padding-left: 6vw;" name="heart-outline" class="text-2xl"></ion-icon>
-                                                <span class="text-xl"> 3 </span>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4 col-sm-4 col-xs-4" style="width: 33%;">
-                                            <div class="flex items-center space-x-4">
-                                                <ion-icon style="padding-left: 6vw;" name="chatbubble-ellipses-outline" class="text-2xl"></ion-icon>
-                                                <span class="text-xl"> <%= element.comment.length %>  </span>
-                                            </div>
+                                        <div class="col-md-12 col-sm-12 col-xs-12" style="width: 33%;">
+                                            <table>
+                                                <tr>
+                                                    <td>
+                                                        <div class="flex items-center space-x-2">
+                                                            <ion-icon style="padding-left: 10vw;" name="share-social-outline" class="text-2xl"></ion-icon>
+                                                            <span class="text-xl">3</span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center space-x-2">
+                                                            <ion-icon style="padding-left: 7vw;" name="heart-outline" class="text-2xl"></ion-icon>
+                                                            <span class="text-xl"> 3 </span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center space-x-2">
+                                                            <ion-icon style="padding-left: 7vw;" name="chatbubble-ellipses-outline" class="text-2xl"></ion-icon>
+                                                            <span class="text-xl"> <%= element.comment.length %>  </span>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            </table>
+
+
+
                                         </div>
                                     </div>
                                 </a>
