--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -40,7 +40,7 @@
                                     <div class="flex items-start pl-3 space-x-4">
                                         <img src="../../../front/images/avatars/avatar-2.jpg" alt="" class="w-16 h-16 rounded-full">
                                         <div class="flex-1">
-                                            <h3 class="text-lg font-semibold line-clamp-1">
+                                            <h3 class="text-lg font-semibold">
                                                 <%= element.title %>
                                             </h3>
                                             <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html">Abdullah Bektaş</span> |
@@ -81,7 +81,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <hr>
+                            <hr style="margin-top: 7px;">
                             <% }) %>
                     </ul>
                 </div>
