--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -11,7 +11,7 @@
                         </div>
                     </div> -->
                     <br>
-                    <div class="flex flex-wrap gap-2">
+                    <div class="flex flex-wrap gap-1 responsive-tab ">
                         <% etiket.forEach(element => { %>
                             <a href="#" class="bg-gray-100 py-1.5 px-4 rounded-full">
                                 <%= element.tag %>
