--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -85,6 +85,7 @@
                             <a href="#">
                                 <img src="../../../front/images/avatars/avatar-2.jpg" class="is_avatar" alt="">
                             </a>
+
                             <div uk-drop="mode: click;offset:5" class="header_dropdown profile_dropdown">
 
                                 <a href="timeline.html" class="user">
@@ -107,6 +108,27 @@
 
 
                             </div>
+
+                            <!-- Message -->
+                            <a href="#" class="is_icon hidden-xl hidden-lg" uk-toggle="target: #create-post-modal">
+                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 492 492" style="enable-background:new 0 0 492 492;" xml:space="preserve">
+
+		<path d="M465.064,207.566l0.028,0H284.436V27.25c0-14.84-12.016-27.248-26.856-27.248h-23.116
+			c-14.836,0-26.904,12.408-26.904,27.248v180.316H26.908c-14.832,0-26.908,12-26.908,26.844v23.248
+			c0,14.832,12.072,26.78,26.908,26.78h180.656v180.968c0,14.832,12.064,26.592,26.904,26.592h23.116
+			c14.84,0,26.856-11.764,26.856-26.592V284.438h180.624c14.84,0,26.936-11.952,26.936-26.78V234.41
+			C492,219.566,479.904,207.566,465.064,207.566z"/>
+</svg>
+
+                            </a>
+
+                            <a href="#" class="is_icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
+                                </svg>
+                                <span>3</span>
+                            </a>
 
                         </div>
 
