--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -108,18 +108,27 @@
 
 
                             </div>
+                            <a href="#" class="is_icon">
+                                <svg id="Layer_1" enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg"><g><path d="m475.219 310.52h-80.35l112.547-109.708c4.089-3.985 5.561-9.946 3.796-15.376s-6.458-9.388-12.108-10.209l-158.698-23.06-70.972-143.806c-2.528-5.119-7.741-8.361-13.451-8.361s-10.924 3.241-13.451 8.361l-70.973 143.806-158.698 23.06c-5.65.821-10.344 4.779-12.108 10.209s-.293 11.391 3.796 15.376l114.835 111.937-27.11 158.057c-.965 5.627 1.349 11.315 5.968 14.671 2.613 1.899 5.707 2.865 8.818 2.865 2.387 0 4.784-.569 6.979-1.723l141.946-74.625 54.518 28.645v34.598c0 20.271 16.492 36.764 36.764 36.764h127.953c20.271 0 36.764-16.492 36.764-36.764v-127.954c-.001-20.271-16.494-36.763-36.765-36.763zm-212.259 71.249c-4.37-2.295-9.59-2.294-13.958.002l-122.022 64.15 23.305-135.874c.835-4.866-.778-9.831-4.313-13.277l-98.719-96.227 136.425-19.823c4.886-.71 9.108-3.779 11.294-8.206l61.012-123.623 61.011 123.623c2.185 4.427 6.408 7.496 11.294 8.206l136.425 19.823-98.718 96.227c-3.52 3.43-5.135 8.366-4.325 13.213l.089.536h-14.493c-20.271 0-36.764 16.492-36.764 36.764v59.466zm219.023 93.467c0 3.729-3.034 6.764-6.764 6.764h-127.953c-3.729 0-6.764-3.034-6.764-6.764v-127.953c0-3.729 3.034-6.764 6.764-6.764h127.953c3.729 0 6.764 3.034 6.764 6.764z"/><path d="m447.838 396.159h-21.391v-18.283c0-8.284-6.716-15-15-15s-15 6.716-15 15v18.283h-19.949c-8.284 0-15 6.716-15 15s6.716 15 15 15h19.949v23.058c0 8.284 6.716 15 15 15s15-6.716 15-15v-23.058h21.391c8.284 0 15-6.716 15-15s-6.716-15-15-15z"/></g></svg>
+                            </a>
+
 
                             <!-- Message -->
                             <a href="#" class="is_icon hidden-xl hidden-lg" uk-toggle="target: #create-post-modal">
-                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 492 492" style="enable-background:new 0 0 492 492;" xml:space="preserve">
+                                <svg stroke="currentColor" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 492 492" style="enable-background:new 0 0 492 492;" xml:space="preserve">
+                                <path d="M465.064,207.566l0.028,0H284.436V27.25c0-14.84-12.016-27.248-26.856-27.248h-23.116
+                                    c-14.836,0-26.904,12.408-26.904,27.248v180.316H26.908c-14.832,0-26.908,12-26.908,26.844v23.248
+                                    c0,14.832,12.072,26.78,26.908,26.78h180.656v180.968c0,14.832,12.064,26.592,26.904,26.592h23.116
+                                    c14.84,0,26.856-11.764,26.856-26.592V284.438h180.624c14.84,0,26.936-11.952,26.936-26.78V234.41
+                                    C492,219.566,479.904,207.566,465.064,207.566z"/>
+                        </svg>
 
-		<path d="M465.064,207.566l0.028,0H284.436V27.25c0-14.84-12.016-27.248-26.856-27.248h-23.116
-			c-14.836,0-26.904,12.408-26.904,27.248v180.316H26.908c-14.832,0-26.908,12-26.908,26.844v23.248
-			c0,14.832,12.072,26.78,26.908,26.78h180.656v180.968c0,14.832,12.064,26.592,26.904,26.592h23.116
-			c14.84,0,26.856-11.764,26.856-26.592V284.438h180.624c14.84,0,26.936-11.952,26.936-26.78V234.41
-			C492,219.566,479.904,207.566,465.064,207.566z"/>
-</svg>
-
+                            </a>
+                            <a href="#" class="is_icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
+                                </svg>
+                                <!-- <span>4</span> -->
                             </a>
 
                             <a href="#" class="is_icon">
