--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -21,7 +21,7 @@
                     <br><br>
                     <div class="flex justify-between relative md:mb-4 mb-3">
                         <div class="flex-1">
-                            <h2 class="text-3xl font-semibold"> Popüler Konular </h2>
+                            <p class="text-center" style="font-family: 'Shadows Into Light', cursive; font-size: 20pt;"> Popüler Konular </p>
                             <!-- <nav class="cd-secondary-nav border-b md:m-0 -mx-4">
                             <ul>
                                 <li class="active"><a href="#" class="lg:px-2"> Popular </a></li>
@@ -86,7 +86,7 @@
                             <% }) %>
                     </ul>
                 </div>
-                <div class="lg:w-1/4 w-full flex-shrink-0">
+                <div id="son" class="lg:w-1/4 w-full flex-shrink-0">
 
                     <div uk-sticky="offset:100" class="uk-sticky">
 
