--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -90,7 +90,7 @@
 
                     </div>
                 </div>
-                <div class="lg:w-1/4 w-full flex-shrink-0">
+                <div id="son" class="lg:w-1/4 w-full flex-shrink-0">
 
                     <div uk-sticky="offset:100" class="uk-sticky">
 
