--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -24,9 +24,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <style>
+        #logo {
+            padding-left: 4vw;
+            font-family: 'Francois One', sans-serif;
+        }
+        
         @media screen and (max-width: 600px) {
             #son {
                 display: none;
+            }
+            #logo {
+                padding-left: 35vw;
+                font-family: 'Francois One', sans-serif;
             }
         }
     </style>
@@ -43,10 +52,10 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M3 4h18v2H3V4zm0 7h12v2H3v-2zm0 7h18v2H3v-2z" fill="currentColor"></path></svg>
                         </span> -->
 
-                        <div id="logo" style="padding-left: 4vw; font-family: 'Francois One', sans-serif;">
+                        <div id="logo">
                             <a href="/">
-                                <img src="../../../panpan.png" alt="">
-                                <img src="../../../panpan.png" class="logo_mobile" alt="">
+                                <img src="../../../newpan.png" alt="">
+                                <img src="../../../newpan.png" class="logo_mobile" alt="">
 
                             </a>
                         </div>
