--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -31,8 +31,9 @@
                             </ul>
                         </nav> -->
                         </div>
-                    </div>
 
+                    </div>
+                    <hr style="background-color: steelblue; height: 1px; border: 0; margin-bottom: 10px;">
                     <ul class="space-y-6">
                         <% sozluk.forEach(element => { %>
                             <li>
