--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -1,5 +1,5 @@
 <% layout("layout") %>
-
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <div class="main_content">
         <div class="mcontainer">
 
