--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -128,18 +128,12 @@
                             </div>
                             <a href="#" class="is_icon">
                                 <svg height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg"><g>
-                                    <path fill="gray" d="M465.211,473.784l-35.068-319.999c-1.918-17.507-16.646-30.708-34.257-30.708h-26.656v-9.846
-                                    C369.231,50.795,318.435,0,256,0S142.769,50.795,142.769,113.231v9.846h-26.656c-17.611,0-32.339,13.202-34.257,30.708
-                                    l-35.068,320c-1.064,9.722,2.069,19.475,8.596,26.757C61.911,507.824,71.265,512,81.045,512h349.91
-                                    c1.778,0,3.542-0.142,5.278-0.412c0.054-0.009,0.109-0.013,0.162-0.022c0.297-0.047,0.591-0.11,0.885-0.166
-                                    c0.297-0.056,0.597-0.103,0.892-0.167c0.205-0.044,0.407-0.1,0.61-0.148c0.382-0.09,0.764-0.174,1.142-0.277
-                                    c3.861-1.043,7.512-2.759,10.792-5.055c0.169-0.118,0.343-0.229,0.51-0.351c1.948-1.416,3.756-3.042,5.389-4.863
-                                    C463.144,493.258,466.276,483.505,465.211,473.784z M172.307,113.231c0-46.148,37.544-83.692,83.692-83.692
-                                    s83.692,37.544,83.692,83.692v9.846H172.307V113.231z M111.22,157.002c0.274-2.501,2.378-4.386,4.893-4.386h26.656v44.308
-                                    c0,8.157,6.613,14.769,14.769,14.769s14.769-6.613,14.769-14.769v-44.308h167.385v44.308c0,8.157,6.613,14.769,14.769,14.769
-                                    s14.769-6.613,14.769-14.769v-44.308h26.656c2.516,0,4.619,1.887,4.893,4.387l26.495,241.766H84.725L111.22,157.002z
-                                     M434.621,480.824c-0.548,0.611-1.753,1.637-3.666,1.637H81.045c-1.912,0-3.117-1.026-3.666-1.637
-                                    c-0.548-0.611-1.437-1.921-1.228-3.822l5.338-48.694h349.023l5.337,48.694C436.057,478.903,435.169,480.214,434.621,480.824z"/></g></svg>
+                                    <path fill="gray" d="M440.1,422.7l-28-315.3c-0.6-7-6.5-12.3-13.4-12.3h-57.6C340.3,42.5,297.3,0,244.5,0s-95.8,42.5-96.6,95.1H90.3
+		c-7,0-12.8,5.3-13.4,12.3l-28,315.3c0,0.4-0.1,0.8-0.1,1.2c0,35.9,32.9,65.1,73.4,65.1h244.6c40.5,0,73.4-29.2,73.4-65.1
+		C440.2,423.5,440.2,423.1,440.1,422.7z M244.5,27c37.9,0,68.8,30.4,69.6,68.1H174.9C175.7,57.4,206.6,27,244.5,27z M366.8,462
+		H122.2c-25.4,0-46-16.8-46.4-37.5l26.8-302.3h45.2v41c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5v-41h139.3v41
+		c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5v-41h45.2l26.9,302.3C412.8,445.2,392.1,462,366.8,462z"/>
+                                </g></svg>
                             </a>
                             <a href="#" class="is_icon gizle" uk-toggle="target: #create-post-modal">
                                 <img src="../../../color-pencil.png" height="30px">
