--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -132,7 +132,7 @@
 
         </div>
 
-        <div @click="acKapa()" class="start-chat header-search-icon" id="gizle" uk-toggle="target: #wrapper ; cls: show-searchbox">
+        <div @click="acKapa()" style="padding-top: 3px;" class="start-chat header-search-icon" id="gizle" uk-toggle="target: #wrapper ; cls: show-searchbox">
         </div>
     </div>
 
