--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -51,8 +51,7 @@
                                             <!-- <p class="leading-6 line-clamp-2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</p> -->
                                         </div>
                                     </div>
-                                    <div class="row">
-
+                                    <div class="row" style="margin-top: -15px;">
                                         <div class="col-md-12 col-sm-12 col-xs-12" style="width: 33%;">
                                             <table>
                                                 <tr>
