--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -64,24 +64,24 @@
                                         </div>
                                     </div>
                                     <div class="row" style="margin-top: -15px;">
-                                        <div class="col-md-12 col-sm-12 col-xs-12" style="width: 33%;">
+                                        <div class="col-md-12 col-sm-12 col-xs-12">
                                             <table>
                                                 <tr>
                                                     <td>
                                                         <div class="flex items-center space-x-4">
-                                                            <ion-icon id="icon" name="share-social-outline" class="text-2xl"></ion-icon>
+                                                            <ion-icon style="padding-left: 17vw;" name="share-social-outline" class="text-2xl"></ion-icon>
                                                             <span class="text-xl">3</span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center space-x-4">
-                                                            <ion-icon id="icon" name="heart-outline" class="text-2xl"></ion-icon>
+                                                            <ion-icon style="padding-left: 17vw;" name="heart-outline" class="text-2xl"></ion-icon>
                                                             <span class="text-xl"> 3 </span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center space-x-4">
-                                                            <ion-icon id="icon" name="chatbubble-ellipses-outline" class="text-2xl"></ion-icon>
+                                                            <ion-icon style="padding-left: 17vw;" name="chatbubble-ellipses-outline" class="text-2xl"></ion-icon>
                                                             <span class="text-xl"> <%= element.comment.length %>  </span>
                                                         </div>
                                                     </td>
