--- a/views/front/auth/register.ejs
+++ b/views/front/auth/register.ejs
@@ -19,7 +19,7 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
-            background-color: #464646;
+            background-color: white;
         }
     </style>
 
@@ -58,7 +58,7 @@
                     </div>
                     <div class="uk-form-group">
                         <div class="uk-position-relative">
-                            <input class="uk-input bg-secondary" name="yas" type="number" placeholder="Yaşınız">
+                            <input class="uk-input bg-secondary" name="yas" type="date" placeholder="Yaşınız">
                         </div>
                     </div>
                     <div class="uk-form-group">
